add partials and layout

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -5,6 +5,10 @@
     </title>
 </head>
 <body>
-    <h1>Codeial / <%=title%></h1>
+    <%- include('_header'); %>
+    
+    <%- body %>
+    
+    <%- include('_footer'); %>
 </body>
 </html>
