--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,2 +1,7 @@
 <link rel="stylesheet" href="/css/user_profile.css">
 <h1>Codeial / Profile Page </h1>
+
+<a href="/users/sign-out">signout</a>
+
+<p>Name: <%= user.name %></p>
+<p>Email: <%= user.email %></p>
