--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -1,3 +1,7 @@
 <footer>
-    Page Foorter
+    <p>&#169; Codieal. All Rights Reserved</p>
+    <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/users/profile">Profile</a></li>
+    </ul>
 </footer>
