convert posts to ajax

--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -3,7 +3,7 @@ body{
     /* text-align: center; */
     font-family: sans-serif;
 
-    #layout-main{
-        height: 100%;
-    }
+    // #layout-main{
+    //     min-height: 100%;
+    // }
 }
